# backend/swagger.json
@@ -11,10 +11,16 @@
     "http"
   ],
   "paths": {
-    "/tasks/Allget": {
+    "/tasks/Allget/{s_id}": {
       "get": {
         "description": "",
         "parameters": [
+          {
+            "name": "s_id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
           {
             "name": "authorization",
             "in": "header",
@@ -24,6 +30,9 @@
         "responses": {
           "200": {
             "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
           },
           "401": {
             "description": "Unauthorized"
@@ -208,7 +217,7 @@
         }
       }
     },
-    "/tasks/complete": {
+    "/tasks/totalTaskNum": {
       "get": {
         "description": "",
         "parameters": [
@@ -231,30 +240,7 @@
         }
       }
     },
-    "/tasks/TotalTaskNum": {
-      "get": {
-        "description": "",
-        "parameters": [
-          {
-            "name": "authorization",
-            "in": "header",
-            "type": "string"
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "OK"
-          },
-          "401": {
-            "description": "Unauthorized"
-          },
-          "500": {
-            "description": "Internal Server Error"
-          }
-        }
-      }
-    },
-    "/tasks/TotalSalary": {
+    "/tasks/totalSalary": {
       "get": {
         "description": "",
         "parameters": [
